# MCMD-Mamba

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml  model.yaml
src/mcmd_mamba/: __init__.py
src/mcmd_mamba/cli/: __init__.py  eval.py  predict.py  train.py
src/mcmd_mamba/config/: __init__.py  load.py  schema.py
src/mcmd_mamba/models/: __init__.py  losses.py  mcmd_mamba.py
src/mcmd_mamba/models/backbones/: __init__.py  convnext_adapter.py  weights.py
src/mcmd_mamba/models/stage1/: __init__.py  doc.md  mce.py  psa.py  tokenization.py  wrapper.py
src/mcmd_mamba/models/stage2/: __init__.py  doc.md  mamba_core.py  md_mamba_block.py  md_ssm.py  ops.py  scans.py  stack.py  tests_stage2.py
src/mcmd_mamba/models/stage3/: __init__.py  doc.md  head.py  pooling.py  split.py  tests_stage3.py  weighted_fusion.py  wrapper.py
src/mcmd_mamba/training/: __init__.py  callbacks.py  engine.py  metrics.py  optim.py  reproducibility.py
src/mcmd_mamba/utils/: __init__.py  io.py  logging.py  registry.py
tests/: conftest.py  test_forward_shapes.py  test_fusion.py  test_scans.py  test_stage1.py  test_stage1_stage2_e2e.py  test_stage1_stage2_stage3_e2e.py  test_stage2_exhaustive.py  test_stage3.py  test_stage3_exhaustive.py  test_tokenization.py
